--- a/pom.xml
+++ b/pom.xml
@@ -28,30 +28,30 @@
             <version>3.0.6</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.sun.jersey.contribs/jersey-multipart -->
-<dependency>
+<!--<dependency>
     <groupId>com.sun.jersey.contribs</groupId>
     <artifactId>jersey-multipart</artifactId>
     <version>1.19.4</version>
     <type>jar</type>
-</dependency>
+</dependency>-->
 <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-client -->
-<dependency>
+<!--<dependency>
     <groupId>com.sun.jersey</groupId>
     <artifactId>jersey-client</artifactId>
     <version>1.19.4</version>
-</dependency>
+</dependency>-->
 <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-core -->
-<dependency>
+<!--<dependency>
     <groupId>com.sun.jersey</groupId>
     <artifactId>jersey-core</artifactId>
     <version>1.19.4</version>
-</dependency>
+</dependency>-->
 <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-json -->
-<dependency>
+<!--<dependency>
     <groupId>com.sun.jersey</groupId>
     <artifactId>jersey-json</artifactId>
     <version>1.19.4</version>
-</dependency>
+</dependency>-->
 
         <dependency>
             <groupId>com.sun.mail</groupId>
