--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
             <artifactId>javax.mail</artifactId>
             <version>1.6.0</version>
         </dependency>
+<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt</artifactId>
+    <version>0.6.0</version>
+</dependency>
 
         <dependency>
             <groupId>com.sun.mail</groupId>
